--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,9 +6,9 @@
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
 phlow: # replace this with your info
-  name: "Phlow"
-  siterole: "webmaster, developer, copywriter, designer"
-  uri: http://phlow.de/
+  name: "Brian Huber"
+  siterole: "Full Stack Developer, Business Guru, Outdoor Enthusiast"
+  uri: http://brianthuber.com
   email:
-  twitter: "@phlow"
+  twitter: ""
 # you can add more authors here
